--- a/refs.bib
+++ b/refs.bib
@@ -120,6 +120,13 @@
 	publisher={Wiley Online Library}
 }
 
+@article{durr1996quantum,
+	title={A quantum algorithm for finding the minimum},
+	author={Durr, Christoph and Hoyer, Peter},
+	journal={arXiv preprint quant-ph/9607014},
+	year={1996}
+}
+
 
 @misc{nielsen2002quantum,
 	title={Quantum computation and quantum information},
