expo search algorithm figure

--- a/main.tex
+++ b/main.tex
@@ -419,6 +419,8 @@ R = \ceil[\Bigg]{\frac{\pi}{4} \sqrt{\frac{N}{M}}}
  	\Return{$x_0$}
  \end{algorithm}
  
+ \todo{Adequate thought the no solution case}
+ 
  \subsection{Quantum minimization}
 
  \begin{algorithm}[t!]
